# HE-3DSG-Framework

./: .gitignore  CMakeLists.txt  FindFlann.cmake  README.md
cmake/: LinkAssimp.cmake  LinkEigen3.cmake  LinkJson.cmake  LinkOnnxRuntime.cmake  LinkOpenCV.cmake  Linktinyply.cmake  UseJson.cmake  UseOnnxRuntime.cmake  UseOpenMP.cmake  Usetinyply.cmake
elasticfusionpublic/: build.sh
elasticfusionpublic/Core/src/: CMakeLists.txt  ElasticFusion.cpp  GPUTexture.cpp  GlobalModel.cpp
elasticfusionpublic/Core/src/Cuda/: reduce.cu
elasticfusionpublic/Core/src/Utils/: GPUConfig.h
elasticfusionpublic/GPUTest/src/: CMakeLists.txt  GPUTest.cpp
elasticfusionpublic/GPUTest/tiff-4.0.4/: Makefile  config.status  libtiff-4.pc  libtool
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/addtiffo/: Makefile  addtiffo
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/addtiffo/.deps/: addtiffo.Po  tif_overview.Po  tif_ovrcache.Po
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/addtiffo/.libs/: addtiffo
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/dbs/: Makefile  tiff-bi  tiff-grayscale  tiff-palette  tiff-rgb
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/dbs/.deps/: tiff-bi.Po  tiff-grayscale.Po  tiff-palette.Po  (+1 more)
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/iptcutil/: Makefile  iptcutil
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/mfs/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/pds/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/ras/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/stream/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/tags/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/contrib/win_dib/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/html/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/html/images/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/html/man/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/libtiff/: Makefile  libtiff.la  libtiffxx.la  mkg3states  tif_config.h  tiffconf.h
elasticfusionpublic/GPUTest/tiff-4.0.4/libtiff/.deps/: tif_dir.Plo  tif_dirread.Plo  tif_dirwrite.Plo  tif_jbig.Plo  tif_jpeg.Plo  tif_lzma.Plo  tif_pixarlog.Plo  tif_zip.Plo
elasticfusionpublic/GPUTest/tiff-4.0.4/libtiff/.libs/: libtiff.lai  libtiff.so.5.2.2  libtiffxx.lai  libtiffxx.so.5.2.2  libtiffxx.so.5.2.2T
elasticfusionpublic/GPUTest/tiff-4.0.4/man/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/port/: Makefile  libport.la
elasticfusionpublic/GPUTest/tiff-4.0.4/test/: Makefile
elasticfusionpublic/GPUTest/tiff-4.0.4/tools/: Makefile  bmp2tiff  fax2ps  fax2tiff  gif2tiff  pal2rgb  ppm2tiff  ras2tiff  raw2tiff  rgb2ycbcr  thumbnail  tiff2bw  tiff2pdf  tiff2ps  tiff2rgba  tiffcmp  tiffcp  tiffcrop  tiffdither  tiffdump  tiffinfo  tiffmedian  tiffset  tiffsplit
elasticfusionpublic/GPUTest/tiff-4.0.4/tools/.deps/: bmp2tiff.Po  fax2ps.Po  gif2tiff.Po  ras2tiff.Po  raw2tiff.Po  rgb2ycbcr.Po  thumbnail.Po  tiffcp.Po
elasticfusionpublic/GPUTest/tiff-4.0.4/tools/.libs/: bmp2tiff  fax2ps  fax2tiff  gif2tiff  pal2rgb  ppm2tiff  ras2tiff  raw2tiff  rgb2ycbcr  thumbnail  tiff2bw  tiff2pdf  tiff2ps  tiff2rgba  tiffcmp  tiffcp  tiffcrop  tiffdither  tiffdump  tiffinfo  tiffmedian  tiffset  tiffsplit
elasticfusionpublic/GUI/src/: CMakeLists.txt  MainController.cpp
elasticfusionpublic/GUI/src/Tools/: JPEGLoader.h
src/: main.cpp  testonnx.py
src/Core/: InstanceFusion.cpp  InstanceFusion.h  InstanceFusionCuda.cu  InstanceFusion_superpixel.cpp  InstanceTable.cpp
src/gSLICr/ORUtils/: Vector.h
src/graph/: EatGCN.cpp  EatGCN.h  JsonUtil.h  MemoryBlock.h  OnnxModelBase.h  ParamLoader.h  UtilDataProcessing.h  UtilInSegPlyLoader.h  UtilMath.h  config.cpp  config.h  edge.cpp  edge.h  graph.cpp  graph.h  node.cpp  node.h
src/gui/: Gui.cpp  Gui.h
src/map_interface/: ElasticFusionInterface.cpp  ElasticFusionInterface.h
src/utilities/: PNGLogReader.cpp  PNGLogReader.h  RawLogReader.h  Types.h  slic.h
(+7 files in other folders)
